<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>camera_viewer</name>
  <version>1.0.0</version>
  <description>Package to view raw image stream from Turtlebots used for Georgia Tech's Introduction to Robotics Research course.</description>
  <maintainer email="sean.wilson@gtri.gatech.edu">Sean Wilson</maintainer>
  <license>MIT</license>

  <test_depend>ament_copyright</test_depend>
  <test_depend>ament_flake8</test_depend>
  <test_depend>ament_pep257</test_depend>
  <test_depend>python3-pytest</test_depend>
  <depend>cv_bridge</depend>
  <depend>sensor_msgs</depend>
  <depend>geometry_msgs</depend>
  
  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
